# ZenClaw

./: .gitignore  README.md  README_zh.md  config.example.yaml  config.yaml  main.py  pyproject.toml  requirements.txt  weather_data.json  weather_report.md  weather_scraper.py
miniclaw/: __init__.py  main.py
miniclaw/agents/: __init__.py  agent.py  context_isolator.py  master_agent.py  streaming.py  subagent_executor.py  subagent_factory.py  subagent_orchestrator.py  tool_executor.py
miniclaw/channels/: cli_channel.py  registry.py  ws_channel.py
miniclaw/config/: loader.py  settings.py
miniclaw/dispatcher/: __init__.py  dispatcher.py  event_bus.py  subagent_registry.py  task_scheduler.py
miniclaw/gateway/: auth.py  protocol.py  router.py  server.py
miniclaw/memory/: base.py  context_guard.py  embeddings.py  hybrid_store.py  sqlite_store.py  vector_store.py
miniclaw/sessions/: history.py  manager.py  session.py
miniclaw/tools/: base.py  loader.py  registry.py  skill_md_loader.py
miniclaw/types/: __init__.py  enums.py  events.py  messages.py  structured_result.py  task_graph.py  task_outcome.py  turn_snapshot.py
miniclaw/utils/: logging.py
miniclaw/worktree/: __init__.py  isolated_tools.py  isolator.py  lifecycle.py  manager.py
skills/git-workflow/: SKILL.md
skills/python-pytest-expert/: SKILL.md
skills/read-code/: SKILL.md
taskweave/: main.py
taskweave/agents/: __init__.py  agent.py  context_isolator.py  master_agent.py  streaming.py  subagent_executor.py  subagent_factory.py  subagent_orchestrator.py  tool_executor.py
(+98 files in other folders)
